--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Donate Bangladesh</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
@@ -18,7 +18,7 @@
     <div class="bg-white shadow sticky top-0">
       <nav class="p-4 m-4 flex justify-between items-center bg-[#F9F7F3]">
         <div>
-          <p>Blog</p>
+          <a href="blog.html"> Blog </a>
         </div>
         <div class="flex items-center">
           <img src="assets/logo.png" alt="" />
