--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="max-w-7xl mx-auto text-center>
+    <div class="bg-white shadow sticky top-0">
+      <nav class="p-4 m-4 flex justify-between items-center bg-[#F9F7F3]">
+        <div>
+          <a href="index.html"> Home </a>
+        </div>
+        <div class="flex items-center">
+          <img src="assets/logo.png" alt="" />
+          <span>Donate Bangladesh</span>
+        </div>
+        <div class="flex items-center space-x-2">
+          <img src="assets/coin.png" alt="" />
+          <span id="my-bal">5500</span>
+        </div>
+      </nav>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe fugiat
       alias debitis dolor iusto odio libero, vel magnam ipsum? Minima.
