--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <div class="bg-white shadow sticky top-0">
       <nav class="p-4 m-4 flex justify-between items-center bg-[#F9F7F3]">
         <div>
-          <a href="index.html"> Home </a>
+          <a href="index.html" class="bg-[#B4F461] px-4 py-2 rounded"> Home </a>
         </div>
         <div class="flex items-center">
           <img src="assets/logo.png" alt="" />
@@ -21,9 +21,25 @@
           <span id="my-bal">5500</span>
         </div>
       </nav>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe fugiat
-      alias debitis dolor iusto odio libero, vel magnam ipsum? Minima.
-    </p>
+    <div class="text-center space-y-6 p-4">
+      <h2 class="text-center text-2xl">Important FAQ ?</h2>
+      <div class="bg-[#F9F7F3] p-4">
+     <p class="font-bold text-left">What is the Document Object Model (DOM) ?</p>
+     <p class="text-justify">The DOM represents a document with a logical tree. Each branch of the tree ends in a node, and each node contains objects. DOM methods allow programmatic access to the tree. With them, you can change the document's structure, style, or content.</p>
+      </div>
+      <div class="bg-[#F9F7F3] p-4">
+     <p class="font-bold text-left">How do you select an element form the dom ?</p>
+     <p class="text-justify">Using getElementsByTagName Select an Element form the dom</p>
+      </div>
+      <div class="bg-[#F9F7F3] p-4">
+     <p class="font-bold text-left">What is event delegation in the context of the dom and why is useful ?</p>
+     <p class="text-justify">Event delegation in JavaScript is a pattern that efficiently handles events. Events can be added to a parent element instead of adding to every single element. It refers to the process of using event propagation (bubbling) to handle events at a higher level in the DOM than the element on which the event originated.</p>
+      </div>
+      <div class="bg-[#F9F7F3] p-4">
+     <p class="font-bold text-left">How do you manipulate an element's artibutes styles using the DOM ?</p>
+     <p class="text-justify">The classList object only provide methods to change the class of an element. If you want to change other attributes like id , href , or src , you can use the setAttribute() method. The setAttribute() method accepts two arguments: The name of the attribute to set.</p>
+      </div>
+      
+    </div>
   </body>
 </html>
