--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="flex items-center space-x-2">
           <img src="assets/coin.png" alt="" />
-          <span id="my-bal">555000</span>
+          <span id="my-bal">55500500</span>
           <span>BDT</span>
         </div>
       </nav>
@@ -85,6 +85,62 @@
               Donate Now
             </button>
             <dialog id="my_modal_1" class="modal">
+              <div class="modal-box">
+                <h3 class="text-lg font-bold">Congrats!</h3>
+                <p class="py-4">You have Donated for Humankind</p>
+                <div class="modal-action">
+                  <form method="dialog">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn">Close</button>
+                  </form>
+                </div>
+              </div>
+            </dialog>
+            <!--section: Modal End -->
+          </div>
+        </div>
+      </div>
+      <!-- Feni Feni section: Start start $tart-->
+      <div class="card border shado-sm p-4 m-4">
+        <div
+          class="flex flex-col md:flex-row mt-8 gap-x-6 justify-start items-center"
+        >
+          <div>
+            <img src="assets/feni.png" alt="" />
+          </div>
+          <div class="space-y-2">
+            <div
+              class="flex w-32 items-center space-x-1 bg-gray-500 rounded-full"
+            >
+              <img src="assets/coin.png" alt="" />
+              <span id="total-donate-amount-F">500</span>
+              <span>BDT</span>
+            </div>
+            <h3 id="donate-zone-F" class="text-xl">
+              Donate for Flood Relief in Feni, Bangladesh.
+            </h3>
+            <p>
+              The recent floods in Noakhali have caused significant damage to
+              homes infrastructure. Your donation will help provide essential
+              supplies and to those affected by this disaster. Every
+              contribution, big or small, makes difference. Please join us in
+              supporting the relief efforts and making a positive impact on the
+              lives of those in need.
+            </p>
+            <input
+              id="donate-input-field-F"
+              class="flex border py-2 bordrer"
+              placeholder="Donate amount"
+              type="number"
+            />
+            <!--section: modal start -->
+            <button
+              class="btn bg-[#B4F461] border rounded px-8 py-4 btn md:text-center"
+              id="donate-btn-F"
+            >
+              Donate Now
+            </button>
+            <dialog id="my_modal_2" class="modal">
               <div class="modal-box">
                 <h3 class="text-lg font-bold">Congrats!</h3>
                 <p class="py-4">You have Donated for Humankind</p>
