--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               class="flex w-32 items-center space-x-1 bg-gray-500 rounded-full"
             >
               <img src="assets/coin.png" alt="" />
-              <span id="total-donate-amount-N">500</span>
+              <span id="total-donate-amount-N">700</span>
               <span>BDT</span>
             </div>
             <h3 id="donate-zone-N" class="text-xl">
@@ -91,7 +91,7 @@
                 <div class="modal-action">
                   <form method="dialog">
                     <!-- if there is a button in form, it will close the modal -->
-                    <button class="btn">Close</button>
+                    <button class="btn">Okay Thanks</button>
                   </form>
                 </div>
               </div>
@@ -113,7 +113,7 @@
               class="flex w-32 items-center space-x-1 bg-gray-500 rounded-full"
             >
               <img src="assets/coin.png" alt="" />
-              <span id="total-donate-amount-F">500</span>
+              <span id="total-donate-amount-F">800</span>
               <span>BDT</span>
             </div>
             <h3 id="donate-zone-F" class="text-xl">
@@ -147,7 +147,7 @@
                 <div class="modal-action">
                   <form method="dialog">
                     <!-- if there is a button in form, it will close the modal -->
-                    <button class="btn">Close</button>
+                    <button class="btn">Okay</button>
                   </form>
                 </div>
               </div>
@@ -156,6 +156,63 @@
           </div>
         </div>
       </div>
+      <!-- section: Movement section: start -->
+      <div class="card border shado-sm p-4 m-4">
+        <div
+          class="flex flex-col md:flex-row mt-8 gap-x-6 justify-start items-center"
+        >
+          <div>
+            <img src="assets/quota-protest.png" alt="" />
+          </div>
+          <div class="space-y-2">
+            <div
+              class="flex w-32 items-center space-x-1 bg-gray-500 rounded-full"
+            >
+              <img src="assets/coin.png" alt="" />
+              <span id="total-donate-amount-M">900</span>
+              <span>BDT</span>
+            </div>
+            <h3 id="donate-zone-M" class="text-xl">
+              Aid for Injured in the Quota Movement
+            </h3>
+            <p>
+              The recent floods in Noakhali have caused significant damage to
+              homes infrastructure. Your donation will help provide essential
+              supplies and to those affected by this disaster. Every
+              contribution, big or small, makes difference. Please join us in
+              supporting the relief efforts and making a positive impact on the
+              lives of those in need.
+            </p>
+            <input
+              id="donate-input-field-M"
+              class="flex border py-2 bordrer"
+              placeholder="Donate amount"
+              type="number"
+            />
+            <!--section: modal start -->
+            <button
+              class="btn bg-[#B4F461] border rounded px-8 py-4 btn md:text-center"
+              id="donate-btn-M"
+            >
+              Donate Now
+            </button>
+            <dialog id="my_modal_3" class="modal">
+              <div class="modal-box">
+                <h3 class="text-lg font-bold">Congrats!</h3>
+                <p class="py-4">You have Donated for Humankind</p>
+                <div class="modal-action">
+                  <form method="dialog">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn">Okay</button>
+                  </form>
+                </div>
+              </div>
+            </dialog>
+            <!--section: Modal End -->
+          </div>
+        </div>
+      </div>
+      <!-- section: End end------------------------------------------------------------- -->
     </section>
 
     <!-- section: History sec start -->
@@ -166,7 +223,50 @@
         </h2>
       </div>
     </section>
-    <script></script>
+    <script>
+      function getInputValuebyId(id) {
+        return parseFloat(document.getElementById(id).value);
+      }
+      document
+        .getElementById("donate-btn-M")
+        .addEventListener("click", function () {
+          const donateAmountM = getInputValuebyId("donate-input-field-M");
+          if (donateAmountM <= 0 || isNaN(donateAmountM)) {
+            return alert("invalid Donation amount");
+          }
+          const previousTotalDonateAmount = parseFloat(
+            document.getElementById("total-donate-amount-M").innerText
+          );
+          let updateTotalDonateAmount =
+            donateAmountM + previousTotalDonateAmount;
+          console.log(donateAmountM, previousTotalDonateAmount);
+          document.getElementById("total-donate-amount-M").innerText =
+            updateTotalDonateAmount.toFixed(2);
+          let myBalanceText = getEleById("my-bal").innerText;
+          const myBalance = parseFloat(myBalanceText);
+          const updateMyBalance = myBalance - donateAmountM;
+          console.log(updateMyBalance);
+          document.getElementById("my-bal").innerText = updateMyBalance;
+          my_modal_3.showModal();
+          document.getElementById("donate-input-field-M").value = "";
+
+          // ----------------------------Feni History
+          const donateZone = getEleById("donate-zone-M").innerText;
+          const historyItem = document.createElement("div");
+
+          historyItem.className =
+            "bg-white p-3 rounded-md border border-indigo-500";
+          historyItem.innerHTML = `
+      <p class='text-md text-gray-500'>${donateAmountM.toFixed(
+        2
+      )} taka for ${donateZone}  </p>
+        <p class='text-md text-gray-500'>${new Date()}</p>
+            `;
+
+          let historySection = getEleById("history-section");
+          historySection.appendChild(historyItem);
+        });
+    </script>
 
     <script src="donate.js"></script>
   </body>
