--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body class="max-w-7xl mx-auto bg-black">
     <!-- section: Navbar start -->
     <div class="bg-white shadow sticky top-1 z-40">
-      <nav class="p-4 m-4 flex justify-between items-center bg-[#F9F7F3]">
+      <nav
+        class="p-4 m-4 flex flex-col sm:flex-row justify-between items-center bg-[#F9F7F3]"
+      >
         <div>
           <a href="blog.html" class="bg-[#b4f461] border rounded px-8 py-4">
             Blog
