Some Style Added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </p>
             <input
               id="donate-input-field-N"
-              class="flex border py-2 bordrer"
+              class="flex border py-2 bordrer rounded-md px-2"
               placeholder="Donate amount"
               type="number"
             />
@@ -131,7 +131,7 @@
             </p>
             <input
               id="donate-input-field-F"
-              class="flex border py-2 bordrer"
+              class="flex border py-2 bordrer rounded-md px-2"
               placeholder="Donate amount"
               type="number"
             />
@@ -187,7 +187,7 @@
             </p>
             <input
               id="donate-input-field-M"
-              class="flex border py-2 bordrer"
+              class="flex border py-2 bordrer rounded-md px-2"
               placeholder="Donate amount"
               type="number"
             />
